fixed some picture spacing

--- a/src/components/AboutMe/style.css
+++ b/src/components/AboutMe/style.css
@@ -15,7 +15,7 @@
     font-family: 'Poppins', sans-serif;
     font-size: 3rem;
     color: #36394f;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
 }
 
 .aboutme-body {
